syntax="proto3";

option go_package=".";

message RegisterReq {
  string username =1;
  string password =2;
  int64 phoneNumber=3;
  string email =4;
  string githubName=5;
}

message RegisterResp{
  bool flag =1;
  string message =2;
}
message LoginReq{
  string username =1;
  string password =2;
  int64 phoneNumber=3;
  string email =4;
  string githubName=5;
}
message LoginResp{
  bool flag=1;
  string message=2;
  string token =3;
}


service User{
  rpc Register(RegisterReq)returns(RegisterResp);
  rpc Login(LoginReq)returns(LoginResp);

}